Fix fullscreen scrolling issue - remove overflow hidden to allow page scrolling

--- a/style.css
+++ b/style.css
@@ -253,7 +253,6 @@ html[data-theme="dark"] .navbar {
 
 /* Fullscreen mode styles */
 html[data-fullscreen="true"] {
-    overflow: hidden;
 }
 
 html[data-fullscreen="true"] .navbar {
